--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lodash": "^4.17.20",
     "npac": "^2.1.10",
     "npac-pdms-hemera-adapter": "^1.4.11",
-    "npac-webserver-adapter": "^3.0.5",
+    "npac-webserver-adapter": "github:bersilius/npac-webserver-adapter#feat/parse-xml-body",
     "npac-wsgw-adapters": "^1.1.6",
     "yargs": "^17.0.1"
   },
